--- a/middle.css
+++ b/middle.css
@@ -5,9 +5,9 @@ body {
   align-items: left;
   justify-content: flex-start;
   padding-left: 32px;
-  background-image: url('https://img.youtube.com/vi/K5FK2kOptzI/maxresdefault.jpg');
-  background-size: cover;
-  background-position: stretch;
+  background: linear-gradient(to bottom, #727272, #181818);
+  background-attachment: fixed;
+  font-family: "Arial", serif;
 }
 
 .middle {
@@ -37,7 +37,9 @@ body {
   animation-duration: 1.5s;
   animation-timing-function: ease-in-out;
   box-shadow: 0px 0px 15px 5px rgba(110, 70, 45, 0.3);
+  border: 8px double #000000; /* Add the double border style */
 }
+
 
 .list-item:hover {
   cursor: pointer;
@@ -46,11 +48,11 @@ body {
 
 @keyframes loadingAnim {
   0% {
-    transform: translateY(50px);
+    transform: translateY(0px);
     filter: opacity(0);
   }
   25% {
-    transform: translateY(50px);
+    transform: translateY(0px);
     filter: opacity(0);
   }
   100% {
@@ -70,7 +72,16 @@ body {
 .list-thumbnail {
   display: flex;
   justify-content: center;
-  width: 285px;
+  width: 255px;
+  overflow: hidden;
+  border: none;
+  margin-left: -30px; /* Add negative margin-left to move the thumbnail 10 pixels to the left */
+}
+
+
+.list-image {
+  max-width: 100%; /* Ensure the image scales down within the container */
+  height: auto; /* Maintain the image's aspect ratio */
 }
 
 .list-thumbnail a {
@@ -80,10 +91,6 @@ body {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
-}
-
-.list-image {
-  height: 160px;
 }
 
 .list-info {
@@ -135,13 +142,13 @@ body {
 }
 
 .level-id:before {
-  content: "ID\a";
+  content: "Level ID\a";
 }
 
 .level-author:before {
-  content: "created by\a";
+  content: "Created by\a";
 }
 
 .level-beaten:before {
-  content: "beaten on\a";
+  content: "Beaten on\a";
 }
