--- a/middle.css
+++ b/middle.css
@@ -3,10 +3,11 @@ body {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   padding-left: 32px;
-  background: linear-gradient(to bottom, #727272, #181818);
+  margin-left: 0px;
+  background: linear-gradient(to bottom, #0c0c0c, #181818);
   background-attachment: fixed;
   font-family: "Arial", serif;
 }
@@ -18,9 +19,9 @@ body {
   align-items: center; /* Center horizontally */
   gap: 16px;
   max-width: 928px;
-  width: 100%;
+  width: 200%;
   padding: 0px; /* Add padding as needed */
-  margin-left: 360px;
+  margin-left: -200px;
   margin-top: 120px;
 }
 
