--- a/middle2.css
+++ b/middle2.css
@@ -22,14 +22,14 @@ body {
   width: 200%;
   padding: 0px; /* Add padding as needed */
   margin-left: -248px;
-  margin-top: 120px;
+  margin-top: 90px;
 }
 
 
 .list-item:hover {
   cursor: pointer;
   transform: scale(1.05);
-  border: 8px double #636363;
+  border: 4px solid #636363;
 }
 
 /* Rest of your CSS remains the same */
@@ -51,7 +51,7 @@ body {
   
   
   .list-item {
-    background-color: #ffffff;
+    background: linear-gradient(to bottom, #0c0c0c, #141414);
     min-width: 100%; /* Adjust minimum width */
     height: 160px;
     display: flex;
@@ -64,11 +64,12 @@ body {
     animation-name: loadingAnim;
     animation-duration: 1.5s;
     animation-timing-function: ease-in-out;
-    box-shadow: 0px 0px 15px 5px rgba(110, 70, 45, 0.3);
-    border: 8px double #000000; /* Add the double border style */
+    box-shadow: 0px 0px 2px 2px rgba(255, 255, 255, 0.01);
+    border: 4px solid #202020; /* Add the double border style */
   }
   
   .list-number {
+    color: #c9c9c9;
     flex: 0.15;
     padding: 0 16px;
     font-size: 2.10rem;
@@ -80,12 +81,12 @@ body {
   .list-thumbnail {
     display: flex;
     justify-content: center;
-    width: 256px;
+    width: 270px;
     overflow: hidden;
     border: none;
     margin-left: -30px; /* Add negative margin-left to move the thumbnail 10 pixels to the left */
-    margin-bottom: -3px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.432);
+    margin-bottom: -4px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0);
   }
   
   .list-image {
@@ -108,7 +109,7 @@ body {
   }
   
   .level-name {
-    color: #161616;
+    color: #c9c9c9;
     font-size: 28px;
     font-weight: 600;
     transition: color 0.25s;
@@ -122,7 +123,7 @@ body {
     margin-top: -10px;
     margin-bottom: 30px;
     flex: 1;
-    color: #525252;
+    color: #c4c4c4;
     font-size: 18px;
   }
   
